--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,6 @@
 name = "kedro-spaceflights"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "RO",email = ""}
-]
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -18,4 +15,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
+
+[tool.poetry]
+package-mode = false
 
