Initialise kedro spaceflights tutorial

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,84 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "kedro-spaceflights"
-version = "0.1.0"
-description = ""
+requires-python = ">=3.9"
+name = "spaceflights_pandas"
 readme = "README.md"
-requires-python = ">=3.12"
+dynamic = ["version"]
 dependencies = [
-    "kedro (>=0.19.10,<0.20.0)"
+    "ipython>=8.10",
+    "jupyterlab>=3.0",
+    "notebook",
+    "kedro[jupyter]~=0.19.10",
+    "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset]>=3.0",
+    "kedro-viz>=6.7.0",
+    "scikit-learn~=1.5.1"
 ]
 
+[project.scripts]
+"spaceflights-pandas" = "spaceflights_pandas.__main__:main"
 
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+[project.entry-points."kedro.hooks"]
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.4"
+[project.optional-dependencies]
+docs = [
+    "docutils<0.21",
+    "sphinx>=5.3,<7.3",
+    "sphinx_rtd_theme==2.0.0",
+    "nbsphinx==0.8.1",
+    "sphinx-autodoc-typehints==1.20.2",
+    "sphinx_copybutton==0.5.2",
+    "ipykernel>=5.3, <7.0",
+    "Jinja2<3.2.0",
+    "myst-parser>=1.0,<2.1"
+]
+dev = [
+    "pytest-cov~=3.0",
+    "pytest-mock>=1.7.1, <2.0",
+    "pytest~=7.2",
+    "ruff~=0.1.8"
+]
 
-[tool.poetry]
-package-mode = false
+[tool.setuptools.dynamic]
+version = {attr = "spaceflights_pandas.__version__"}
 
+[tool.setuptools.packages.find]
+where = ["src"]
+namespaces = false
+
+[tool.kedro]
+package_name = "spaceflights_pandas"
+project_name = "Spaceflights Pandas"
+kedro_init_version = "0.19.10"
+tools = "['None']"
+example_pipeline = "False"
+source_dir = "src"
+
+[tool.pytest.ini_options]
+addopts = """
+--cov-report term-missing \
+--cov src/spaceflights_pandas -ra"""
+
+[tool.coverage.report]
+fail_under = 0
+show_missing = true
+exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
+
+[tool.ruff.format]
+docstring-code-format = true
+
+[tool.ruff]
+line-length = 88
+show-fixes = true
+select = [
+    "F",   # Pyflakes
+    "W",   # pycodestyle
+    "E",   # pycodestyle
+    "I",   # isort
+    "UP",  # pyupgrade
+    "PL",  # Pylint
+    "T201", # Print Statement
+]
+ignore = ["E501"]  # Ruff format takes care of line-too-long
