Move post-create.sh into devcontainer directory

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,3 +82,6 @@ select = [
     "T201", # Print Statement
 ]
 ignore = ["E501"]  # Ruff format takes care of line-too-long
+
+[tool.kedro_telemetry]
+project_id = "89a5f2b889fb4da98cdb454fddc9e56e"
