--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ kedro[jupyter]~=0.19.10
 kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset]>=3.0
 kedro-viz>=6.7.0
 scikit-learn~=1.5.1
+pytest~=8.3.4
